--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 /* Add styling to my name on Home Page */
+body{
+  width: 100%;
+  height: 100%;
+}
+
 .my-name {
     display: flex;   
-}
+} 
 
 .background {
   background-color: #7bb274;
   background-image: url("https://www.transparenttextures.com/patterns/black-felt.png");
 }
-
-
 
 .my-header {
     display: flex;
@@ -18,15 +21,21 @@
 .top-navbar {
     background-color: #333;
     overflow: hidden;
+    /* position: fixed;
+    top: -50px;
+    width: 100%;
+    display: block;
+    transition: top 0.3s; */
   }
   
   /* Style the links inside the navigation bar */
   .top-navbar a {
     float: right;
-    color: #f2f2f2;
+    /* display: block; */
+    color: white;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: none;
+    /* text-decoration: none; */
     font-size: 17px;
   }
   
@@ -38,22 +47,65 @@
   
   /* Add a color to the active/current link */
   .top-navbar a.active {
-    background-color: #7bb274;
-    background-image: url("https://www.transparenttextures.com/patterns/cartographer.png");    color: white;
+    background-color: white;
+    color: black;
   }
 
 .name-and-picture {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #7bb274;
-    background-image: url("https://www.transparenttextures.com/patterns/cartographer.png");    padding: 20%;
+    padding-top: 15%;
+    padding-bottom: 20%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(-45deg, #FEC8A7, #FCECA5, #B5EECB, #CBC7FC);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+}
+@keyframes gradient {
+  0% {
+      background-position: 0% 50%;
+  }
+  50% {
+      background-position: 100% 50%;
+  }
+  100% {
+      background-position: 0% 50%;
+  }
 }
 
   .Alicia-Image {
     display: flex;
+    border-radius: 50%;
+    width: 10%;
+    height: 10%;
   }
 
   .icons-for-contact {
     display: flex;
+  }
+
+  .footer {
+    text-align: center;
+    display: flex;
+    background-color: #333;
+    color: white;
+    justify-content: center;
+  }
+
+
+  /* Style the navigation bar */
+  .footer a {
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change color when hover */
+  .footer a:hover {
+    background-color: #ddd;
+    color: black;
   }
