--- a/style.css
+++ b/style.css
@@ -22,11 +22,7 @@ body{
 .top-navbar {
     background-color: #333;
     overflow: hidden;
-    /* position: fixed;
-    top: -50px;
-    width: 100%;
-    display: block;
-    transition: top 0.3s; */
+
   }
   
   /* Style the links inside the navigation bar */
@@ -36,7 +32,7 @@ body{
     color: white;
     text-align: center;
     padding: 14px 16px;
-    /* text-decoration: none; */
+ 
     font-size: 17px;
   }
   
@@ -60,10 +56,11 @@ body{
     padding-bottom: 15%;
     width: 100%;
     height: 100%;
-    background: linear-gradient(-45deg, #FEC8A7, #FCECA5, #B5EECB, #CBC7FC);
+    background: linear-gradient(-45deg, #f6b68e, #f5e291, #aaeec4, #bbb5fd);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
 }
+
 @keyframes gradient {
   0% {
       background-position: 0% 50%;
@@ -96,6 +93,7 @@ body{
     padding: 20px 16px;
   }
 
+
   .footer {
     text-align: center;
     display: flex;
@@ -118,4 +116,12 @@ body{
   .footer a:hover {
     background-color: #ddd;
     color: black;
+  }
+
+  /* bio.html section */
+
+  #about-me {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
