--- a/style.css
+++ b/style.css
@@ -19,34 +19,51 @@ body{
     flex-direction: column;
 }
 /* Add a black background color to the top navigation */
-.top-navbar {
+#navbar {
     background-color: #333;
     overflow: hidden;
 
   }
   
   /* Style the links inside the navigation bar */
-  .top-navbar a {
+  #navbar a {
     float: right;
-    /* display: block; */
+    display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
- 
+    text-decoration: none;
     font-size: 17px;
   }
   
   /* Change the color of links on hover */
-  .top-navbar a:hover {
+  #navbar a:hover {
     background-color: #ddd;
     color: black;
   }
   
   /* Add a color to the active/current link */
-  .top-navbar a.active {
+  #navbar a.active {
     background-color: white;
     color: black;
   }
+
+  /* Page content */
+.content {
+  padding: 16px;
+}
+
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 60px;
+}
 
 .name-and-picture {
     display: flex;
