--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
   margin: 0;
 }
 
-.my-name {
+.myname {
     display: flex;   
 } 
 
@@ -21,7 +21,10 @@ body{
 /* Add a black background color to the top navigation */
 #navbar {
     background-color: #333;
-    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    transition: top 0.3s;
 
   }
   
@@ -70,7 +73,7 @@ body{
     flex-direction: column;
     align-items: center;
     padding-top: 15%;
-    padding-bottom: 15%;
+    padding-bottom: 20%;
     width: 100%;
     height: 100%;
     background: linear-gradient(-45deg, #f6b68e, #f5e291, #aaeec4, #bbb5fd);
@@ -93,15 +96,24 @@ body{
   .Alicia-Image {
     display: flex;
     border-radius: 50%;
-    width: 10%;
-    height: 10%;
+    width: 20%;
+    height: 20%;
   }
 
   .icons-for-contact {
     display: flex;
   }
 
-  .divider {
+  .divider1 {
+    text-align: center;
+    display: flex;
+    background-color: #333;
+    color: white;
+    justify-content: center;
+    padding: 45px;
+  }
+
+  .divider2 {
     text-align: center;
     display: flex;
     background-color: #333;
@@ -113,6 +125,7 @@ body{
   .some-of-my-skills {
     display: flex;
     justify-content: center;
+
   }
 
   /* BEGINNING OF SLIDESHOW GALLERY */
@@ -120,7 +133,8 @@ body{
  /* Position the image container (needed to position the left and right arrows) */
 .container {
   position: relative;
- 
+  display: flex;
+  flex-direction: column;
 }
 
 /* Hide the images by default */
@@ -177,6 +191,7 @@ body{
   background-color: #222;
   padding: 2px 16px;
   color: white;
+
 }
 
 .row:after {
@@ -234,3 +249,4 @@ body{
     flex-direction: column;
     align-items: center;
   }
+
