--- a/style.css
+++ b/style.css
@@ -133,7 +133,6 @@ body{
  /* Position the image container (needed to position the left and right arrows) */
 .container {
   position: relative;
-  padding: 10%;
 }
 
 /* Hide the images by default */
@@ -156,7 +155,7 @@ body{
   width: auto;
   padding: 16px;
   margin-top: -50px;
-  color: white;
+  color: grey;
   font-weight: bold;
   font-size: 20px;
   border-radius: 0 3em 3em 0;
@@ -216,6 +215,7 @@ body{
   opacity: 1;
 }
 
+
 /* END OF SLIDESHOW GALLERY */
 
   .footer {
@@ -254,5 +254,9 @@ body{
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+  }
+
+  .resume-section {
+    padding-top: 4%;
   }
 
