--- a/style.css
+++ b/style.css
@@ -227,6 +227,14 @@ body{
   }
 
 
+@media (max-width:430px) {
+  .footer{
+    display: flex;
+    flex-direction: column; 
+  }
+  }
+
+
   .footer a {
     color: #f2f2f2;
     text-align: center;
@@ -246,6 +254,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 10%;
   }
 
   /* resume.html section */
@@ -259,4 +268,64 @@ body{
   .resume-section {
     padding-top: 4%;
   }
+
+  /* project.html section */
+
+  .project-link{
+    color: white;
+  }
+
+  /* Popup container */
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+/* The actual popup (appears on top) */
+.popup .popuptext {
+  visibility: hidden;
+  width: 160px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-top: 40%;
+  margin-left: -80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class when clicking on the popup container (hide and show the popup) */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
 
