--- a/style.css
+++ b/style.css
@@ -3,16 +3,13 @@ body{
   width: 100%;
   height: 100%;
   margin: 0;
+  background-color: beige;
 }
 
 .myname {
     display: flex;   
 } 
 
-.background {
-  background-color: #7bb274;
-  background-image: url("https://www.transparenttextures.com/patterns/black-felt.png");
-}
 
 .my-header {
     display: flex;
@@ -20,7 +17,7 @@ body{
 }
 /* Add a black background color to the top navigation */
 #navbar {
-    background-color: #333;
+    background-color: #98BF64;
     position: fixed;
     top: 0;
     width: 100%;
@@ -76,7 +73,7 @@ body{
     padding-bottom: 20%;
     width: 100%;
     height: 100%;
-    background: linear-gradient(-45deg, #f6b68e, #f5e291, #aaeec4, #bbb5fd);
+    background: linear-gradient(-45deg, beige, #98BF64, beige);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
 }
@@ -107,7 +104,7 @@ body{
   .divider1 {
     text-align: center;
     display: flex;
-    background-color: #333;
+    background-color: #98BF64;
     color: white;
     justify-content: center;
     padding: 45px;
@@ -116,7 +113,7 @@ body{
   .divider2 {
     text-align: center;
     display: flex;
-    background-color: #333;
+    background-color: #98BF64;
     color: white;
     justify-content: center;
     padding: 45px;
@@ -197,6 +194,9 @@ body{
   content: "";
   display: table;
   clear: both;
+  background: linear-gradient(-45deg, beige, #98BF64, beige);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
 }
 
 /* Six columns side by side */
@@ -221,13 +221,13 @@ body{
   .footer {
     display: flex;
     text-align: center;
-    background-color: #333;
+    background-color: #98BF64;
     color: white;
     justify-content: center;
   }
 
 
-@media (max-width:430px) {
+@media (max-width:500px) {
   .footer{
     display: flex;
     flex-direction: column; 
@@ -257,6 +257,7 @@ body{
     padding: 10%;
   }
 
+
   /* resume.html section */
   .resume-img {
     display: block;
@@ -274,6 +275,14 @@ body{
   .project-link{
     color: white;
   }
+
+.space-illistration{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 
   /* Popup container */
 .popup {
@@ -293,9 +302,8 @@ body{
   padding: 8px 0;
   position: absolute;
   z-index: 1;
-  bottom: 125%;
+  bottom: 110%;
   left: 50%;
-  margin-top: 40%;
   margin-left: -80px;
 }
 
@@ -315,7 +323,7 @@ body{
 .popup .show {
   visibility: visible;
   -webkit-animation: fadeIn 1s;
-  animation: fadeIn 1s
+  animation: fadeIn 1s;
 }
 
 /* Add animation (fade in the popup) */
