--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body{
   width: 100%;
   height: 100%;
   margin: 0;
-  background-color: beige;
+  background-color: #f5f5dc;
+  font-family: Lucida, monospace;
 }
 
 .myname {
