--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Add styling to my name on Home Page */
 body{
   width: 100%;
-  height: 100%;
+  height: 100%; 
   margin: 0;
   background-color: #f5f5dc;
   font-family: Lucida, monospace;
@@ -16,7 +16,8 @@ body{
     display: flex;
     flex-direction: column;
 }
-/* Add a black background color to the top navigation */
+
+/* Add background color to navigation */
 #navbar {
     background-color: #98BF64;
     position: fixed;
@@ -26,7 +27,7 @@ body{
 
   }
   
-  /* Style the links inside the navigation bar */
+  /* Styles links inside navbar */
   #navbar a {
     float: right;
     display: block;
@@ -37,13 +38,13 @@ body{
     font-size: 17px;
   }
   
-  /* Change the color of links on hover */
+  /* Changes the color of nav when hover */
   #navbar a:hover {
     background-color: #ddd;
     color: black;
   }
   
-  /* Add a color to the active/current link */
+  /* changes color to the active link */
   #navbar a.active {
     background-color: white;
     color: black;
@@ -61,7 +62,7 @@ body{
   width: 100%;
 }
 
-/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+/* Add padding to the content to prevent quick movement */
 .sticky + .content {
   padding-top: 60px;
 }
@@ -90,7 +91,7 @@ body{
       background-position: 0% 50%;
   }
 }
-
+/* centering main image on home page */
   .Alicia-Image {
     display: flex;
     border-radius: 50%;
@@ -98,20 +99,8 @@ body{
     height: 20%;
   }
 
-  .icons-for-contact {
-    display: flex;
-  }
 
-  .divider1 {
-    text-align: center;
-    display: flex;
-    background-color: #98BF64;
-    color: white;
-    justify-content: center;
-    padding: 45px;
-  }
-
-  .divider2 {
+  .divider {
     text-align: center;
     display: flex;
     background-color: #98BF64;
@@ -161,13 +150,13 @@ body{
   -webkit-user-select: none;
 }
 
-/* Position the "next button" to the right */
+/* Positions the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
+/* On hover, add a background color with a little bit see-through */
 .prev:hover,
 .next:hover {
   background-color: rgba(0, 0, 0, 0.8);
@@ -195,9 +184,7 @@ body{
   content: "";
   display: table;
   clear: both;
-  background: linear-gradient(-45deg, beige, #98BF64, beige);
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
+  background-color: none;
 }
 
 /* Six columns side by side */
