--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
 
 /* Add background color to navigation */
 #navbar {
-    background-color: #98BF64;
+    background-color: white;
     position: fixed;
     top: 0;
     width: 100%;
@@ -31,7 +31,7 @@ body{
   #navbar a {
     float: right;
     display: block;
-    color: white;
+    color: #98BF64;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -99,116 +99,14 @@ body{
     height: 20%;
   }
 
-
-  .divider {
-    text-align: center;
-    display: flex;
-    background-color: #98BF64;
-    color: white;
-    justify-content: center;
-    padding: 45px;
-    flex-direction: column;
-  }
+.skills{
+  background-color: white;
+}
 
   .some-of-my-skills {
     display: flex;
     justify-content: center;
   }
-
-  /* BEGINNING OF SLIDESHOW GALLERY */
-
- /* Position the image container (needed to position the left and right arrows) */
-.container {
-  position: relative;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Add a pointer when hovering over the thumbnail images */
-.cursor {
-  cursor: pointer;
-
-}
-
-/* Next & previous buttons */
-
-.next, .prev{
-  cursor: pointer;
-  position: absolute;
-  top: 40%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: grey;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3em 3em 0;
-  user-select: none;
-  -webkit-user-select: none;
-}
-
-/* Positions the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-} 
-
-/* Container for image text */
-.caption-container {
-  text-align: center;
-  background-color: beige;
-  padding: 2px 16px;
-  color: #98BF64;
-
-}
- 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-  background-color: none;
-}
-
-/* Six columns side by side */
-.column {
-  float: left;
-  width: 16.66%;
-}
-
-/* Add a transparency effect for thumnbail images */
-.demo {
-  opacity: 0.6;
-}
-
-.active,
-.demo:hover {
-  opacity: 1;
-}
-
-
-/* END OF SLIDESHOW GALLERY */
 
   .footer {
     display: flex;
@@ -273,6 +171,11 @@ body{
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+  transition: transform .2s;
+}
+
+.space-illistration:hover{
+  transform: scale(120%);
 }
 
 
