--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 /* Add styling to my name on Home Page */
-body{
-  width: 100%;
-  height: 100%; 
+html, body{
+  height:100%;
+  width:100%;
+  padding:0;
   margin: 0;
-  background-color: #f5f5dc;
+  position: relative;
   font-family: Lucida, monospace;
+}
+h2 {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  padding-bottom: 65px;
 }
 
 .myname {
@@ -71,8 +78,8 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 15%;
-    padding-bottom: 20%;
+    text-align: center;
+    justify-content: center;
     width: 100%;
     height: 100%;
     background: linear-gradient(-45deg, beige, #98BF64, beige);
@@ -149,7 +156,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10%;
+    padding: 5%;
   }
 
 
