--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@ html, body{
   position: relative;
   font-family: Lucida, monospace;
 }
+
+h1 {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  padding-bottom: 65px;
+}
 h2 {
   display: flex;
   text-align: center;
@@ -15,9 +22,40 @@ h2 {
 }
 
 .myname {
-    display: flex;   
+    display: flex; 
+    font-size: 200px; 
 } 
+/* #BF6498 */
 
+.hello-im{
+  padding-bottom: 20%;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
+
+.wavy {
+  position: relative;
+  -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0,0,0,.2));
+  font-size: 60px;
+}
+.wavy span {
+  font-family: 'Alfa Slab One', cursive;
+  position: relative;
+  display: inline-block;
+  color: #fff;
+  text-transform: uppercase;
+  animation: wavy 1s infinite;
+  animation-delay: calc(.1s * var(--i));
+  
+}
+@keyframes wavy {
+  0%,40%,100% {
+    transform: translateY(0)
+  }
+  20% {
+    transform: translateY(-20px)
+  }
+}
 
 .my-header {
     display: flex;
@@ -82,10 +120,12 @@ h2 {
     justify-content: center;
     width: 100%;
     height: 100%;
+    /* background:url(./flowerbackground.jpeg); */
     background: linear-gradient(-45deg, beige, #98BF64, beige);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
 }
+
 
 @keyframes gradient {
   0% {
@@ -157,6 +197,13 @@ h2 {
     flex-direction: column;
     align-items: center;
     padding: 5%;
+  }
+
+  #col {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
   }
 
 
