--- a/style.css
+++ b/style.css
@@ -120,10 +120,10 @@ h2 {
     justify-content: center;
     width: 100%;
     height: 100%;
-    /* background:url(./flowerbackground.jpeg); */
-    background: linear-gradient(-45deg, beige, #98BF64, beige);
+    background:url(./flowerbackground.jpeg);
+    /* background: linear-gradient(-45deg, beige, #98BF64, beige);
     background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
+    animation: gradient 15s ease infinite; */
 }
 
 
