--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h2 {
   font-family: 'Alfa Slab One', cursive;
   position: relative;
   display: inline-block;
-  color: #fff;
+  color: black;
   text-transform: uppercase;
   animation: wavy 1s infinite;
   animation-delay: calc(.1s * var(--i));
@@ -121,6 +121,7 @@ h2 {
     width: 100%;
     height: 100%;
     background:url(./flowerbackground.jpeg);
+    background-size: 100%;
     /* background: linear-gradient(-45deg, beige, #98BF64, beige);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite; */
