--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ h2 {
   #navbar a {
     float: right;
     display: block;
-    color: #98BF64;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -85,15 +85,10 @@ h2 {
   
   /* Changes the color of nav when hover */
   #navbar a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: #E3FDFD;
+    color: #71C9CE;
   }
   
-  /* changes color to the active link */
-  #navbar a.active {
-    background-color: white;
-    color: black;
-  }
 
   /* Page content */
 .content {
@@ -120,8 +115,8 @@ h2 {
     justify-content: center;
     width: 100%;
     height: 100%;
-    background:url(./flowerbackground.jpeg);
-    background-size: 100%;
+    /* background:url(./flowerbackground.jpeg);
+    background-size: 100%; */
     /* background: linear-gradient(-45deg, beige, #98BF64, beige);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite; */
@@ -198,6 +193,7 @@ h2 {
     flex-direction: column;
     align-items: center;
     padding: 5%;
+    background-color: #A6E3E9;
   }
 
   #col {
