--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ html, body{
   font-family: Lucida, monospace;
 }
 
+
+
 h1 {
   display: flex;
   text-align: center;
@@ -156,6 +158,84 @@ h2 {
     justify-content: center;
   }
 
+  #contact{
+    min-height: 100vh;
+    background: #71C9CE;
+    position: relative;
+    width: 100%;
+  }
+  .contact-title{
+    color: white;
+  }
+  .contact-content{
+    text-align: center;
+  }
+  .content{
+    padding: 80px 5% 80px 5%;
+    margin: 0 auto;
+    max-width: 500px;
+  }
+  .content h1{
+    text-align: center;
+    font-weight: 500;
+  }
+  input[type="text"], input[type="email"], input[type="tel"], textarea {
+    width: 100%;
+    height: 50px;
+    padding: 0px;
+    margin-bottom: 15px;
+    border: 0px;
+    border-radius: 2px;
+    font-size: 16px;
+    text-indent: 12px;
+    opacity: 0.80;
+    font-weight: 400;
+  }
+  input[type="text"]:focus, input[type="email"]:focus, input[type="tel"]:focus, textarea:focus{
+    background: white;
+    opacity: 1;
+    outline: none;
+  }
+  textarea{
+    height: 160px;
+    padding-top: 12px;
+    resize: none;
+  }
+  .submit{ 
+    margin-top: 20px;
+    width: 100%; 
+    height: 40px;
+    background: rgba(255, 255, 255, 0);
+    border-color: black; 
+    font-size: initial;
+    color: black; 
+    font-weight: bolder;
+    -webkit-transition: 0.2s linear;
+    -moz-transition: 0.2s linear;
+    -ms-transition: 0.2s linear;
+    -o-transition: 0.2s linear;
+    transition: 0.2s linear;
+    border-radius: 2px;
+  }
+  .submit:hover{
+    background: black; 
+      color: white;
+  }
+  .boxShadow {
+    -webkit-transition: all 250ms;
+     -moz-transition: all 250ms;
+    transition: all 250ms;
+     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  }
+  .boxShadow:hover, .boxShadow:focus {
+    -webkit-transform: translateY(-5px);
+     -moz-transform: translateY(-5px);
+     transform: translateY(-5px);
+     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+   }
+
+
+
   .footer {
     display: flex;
     text-align: center;
@@ -204,87 +284,4 @@ h2 {
   }
 
 
-  /* resume.html section */
-  .resume-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-  }
-
-  .resume-section {
-    padding-top: 4%;
-  }
-
-  /* project.html section */
-
-  .project-link{
-    color: white;
-  }
-
-.space-illistration{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  transition: transform .2s;
-}
-
-.space-illistration:hover{
-  transform: scale(120%);
-}
-
-
-  /* Popup container */
-.popup {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-}
-
-/* The actual popup (appears on top) */
-.popup .popuptext {
-  visibility: hidden;
-  width: 160px;
-  background-color: #555;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 8px 0;
-  position: absolute;
-  z-index: 1;
-  bottom: 110%;
-  left: 50%;
-  margin-left: -80px;
-}
-
-/* Popup arrow */
-.popup .popuptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
-}
-
-/* Toggle this class when clicking on the popup container (hide and show the popup) */
-.popup .show {
-  visibility: visible;
-  -webkit-animation: fadeIn 1s;
-  animation: fadeIn 1s;
-}
-
-/* Add animation (fade in the popup) */
-@-webkit-keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity: 1;}
-}
-
-@keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity:1 ;}
-}
 
