--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html, body{
 
 
 
+
 h1 {
   display: flex;
   text-align: center;
@@ -175,11 +176,6 @@ h2 {
     font-family: Roboto;
   }
   
-  h1{
-    font-size: 40pt;
-    font-weight: 500;
-    color: #363638;
-  }
   
   .container {
     margin-top: 50px;
@@ -367,6 +363,9 @@ h2 {
   }
   .contact-title{
     color: white;
+    font-size: 40pt;
+    font-weight: 500;
+    color: #363638;
   }
   .contact-content{
     text-align: center;
@@ -380,6 +379,57 @@ h2 {
     text-align: center;
     font-weight: 500;
   }
+
+/* Loader */
+* {
+  box-sizing: border-box;
+}
+.p {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.p::before ,
+.p::after {
+  content: "";
+  position: absolute;
+  border: 3px solid rgb(77, 148, 255);
+  border-radius: 50%;
+  animation: perant 2.5s linear  infinite ;
+  -webkit-animation: perant 2.5s linear  infinite ;
+}
+.p::before {
+  width: 100px;
+  height: 100px;
+  border-left-style: dashed;
+  border-bottom-style: dashed;
+  top: calc(50% - 50px);
+  left: calc(50% - 50px);
+  animation-direction: normal;
+}
+.p::after {
+  width: 60px;
+  height: 60px;
+  border-left-style: dashed;
+  border-right-style: dashed;
+  top: calc(50% - 30px);
+  left: calc(50% - 30px);
+  animation-direction: reverse;
+}
+@keyframes perant {
+  100% {
+      transform: rotate(360deg) ;
+      -webkit-transform: rotate(360deg) ;
+      -moz-transform: rotate(360deg) ;
+      -ms-transform: rotate(360deg) ;
+      -o-transform: rotate(360deg) ;
+}
+}
+
+
+/* Loader End */
+
   input[type="text"], input[type="email"], input[type="tel"], textarea {
     width: 100%;
     height: 50px;
